# chess-coach

./: .gitignore  Makefile  README.md  SETUP.md  docker-compose.yml  env.example  env.local  test_thisgame.pgn
.github/workflows/: backend-tests.yml
apps/backend/: alembic.ini  pyproject.toml
apps/backend/app/: __init__.py  db.py  main.py  models.py  schemas.py  worker.py
apps/backend/app/migrations/: env.py
apps/backend/app/migrations/versions/: 001_initial_migration.py
apps/backend/app/routes/: analyze.py  games.py  human.py  import_chesscom.py  pgn_upload.py  puzzles.py  sparring.py  websocket.py
apps/backend/app/services/: chesscom.py  human_index.py  pgn.py  puzzles.py  stockfish.py
apps/backend/tests/: test_smoke.py
apps/frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
apps/frontend/app/: globals.css  layout.tsx  page.tsx
apps/frontend/app/coach/: page.tsx
apps/frontend/app/game/[id]/: page.tsx
apps/frontend/app/games/: page.tsx
apps/frontend/app/puzzles/: page.tsx
apps/frontend/app/spar/: page.tsx
apps/frontend/components/: ChessBoard.tsx  EvalBar.tsx  EvalGraph.tsx
docker/: backend.Dockerfile  frontend.Dockerfile
engines/stockfish/: .gitkeep
scripts/: download_lichess_slice.py  seed_demo.py  setup_stockfish.ps1
